# surveyor

./: .gitignore  .python-version  .travis.yml  Makefile  README.md  README.rst  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
examples/: full.xml
requirements/: extra.txt  package.txt  qa.txt
surveyor/: __init__.py  elements.py  exceptions.py  parse.py  utils.py
surveyor/classes/: _base.py  simple.py
tests/: test_main.py  test_parsing.py  test_processing.py  test_utils.py
