[flake8]
show-source = True
exclude = build,dist,docs/conf.py,*.egg-info,.eggs,.cache,.tox
max-line-length = 120

[wheel]
universal = 1

[pytest]
addopts = --color=auto --cov=surveyor --cov-report=term-missing
norecursedirs = build dist docs *.egg-info .eggs cache .tox

[metadata]
name = surveyor
version = 0.1
description-file = README.rst
summary = Painless XLSX templating
maintainer = Sergey Arkhipov
mainteiner-email = nineseconds@yandex.ru
author = Sergey Arkhipov
author-email = nineseconds@yandex.ru
license = MIT
requires-python = >=2.6
home-page = https://github.com/9seconds/surveyor
project-url = https://github.com/9seconds/surveyor
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: PyPy

[files]
packages =
    surveyor

[extras]
fast =
    lxml

[entry_points]
console_scripts =
    surveyor = surveyor:main

[global]
setup-hooks =
    pbr.hooks.setup_hook
